tests/snapshots/usage/jobs__cancel.snap
---
source: tests/cli/snapshots.rs
---
$ vendo jobs cancel
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <jobId>

Usage: vendo jobs cancel <jobId>

For more information, try '--help'.

$ vendo jobs cancel --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <jobId>","code":null,"status":null,"requestId":null}}
